@@ -3,4 +3,9 @@
 
 class Net::SSLeay::EVP {
   
+  use Net::SSLeay::EVP_MD;
+  
+  # Class Methods
+  native static method get_digestbyname : Net::SSLeay::EVP_MD ($name : string);
+  
 }
