@@ -8,6 +8,7 @@
     * Add Net::SSLeay::X509#get_subject_name method.
     * Add Net::SSLeay::EVP_MD class.
     * Add Net::SSLeay::EVP class.
+    * Add Net::SSLeay::EVP#get_digestbyname method.
 0.010 2024-11-11
   [New Features]
     * Add Net::SSLeay::BIO#new_file method.
